--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div class="navigation-header">
                     <form class="search-line" action="https://echo.htmlacademy.ru" method="get" name="search">
                         <input class="header-search" type="search" name="finder" placeholder="Поиск по сайту" required autocomplete="off" />
-                        <button class="button-search" type="submit">Найти</button>
+                        <button class="button-search" type="submit" >Найти</button>
                     </form>
                     <ul class="navigation-user">
                         <li class="navigation-item">
@@ -195,7 +195,7 @@
                         </a>
                     </li>
                     <li class="catalog-item"><a class="catalog-link camera" href="#">Экшн-камеры</a></li>
-                    <li class="catalog-item"><a class="catalog-link fitness" href="#">Фитнесс-браслеты</a></li>
+                    <li class="catalog-item"><a class="catalog-link fitness" href="#">Фитнес-браслеты</a></li>
                     <li class="catalog-item"><a class="catalog-link watch" href="#">Умные часы</a></li>
                     <li class="catalog-item"><a class="catalog-link quadrocopter" href="#">Квадрокоптеры</a></li>
                 </ul>
@@ -226,14 +226,15 @@
                         <div class="services-description delivery">
                             <h3 class="tab-title">Доставка</h3>
                             <p class="tab-paragraph">
-                                Мы с удовольствием доставим ваш товар прямо к вашему подъезду совершенно бесплатно! Ведь мы неплохо заработаем, поднимая его на ваш этаж.
+                                Мы&nbsp;с&nbsp;удовольствием доставим ваш товар прямо
+                                к&nbsp;вашему подъезду совершенно бесплатно! Ведь
+                                мы&nbsp;неплохо заработаем, поднимая его на&nbsp;ваш этаж.
                             </p>
                         </div>
-                        <div class="services-description garanty">
+                        <div class="services-description guarantee">
                             <h3 class="tab-title">Гарантия</h3>
                             <p class="tab-paragraph">
-                                Если из-за возгорания купленного у нас товара у вас сгорит дом — не переживайте, мы выдадим вам новый. Товар, не дом, конечно же.
-                            </p>
+                                Если из-за возгорания купленного у&nbsp;нас товара у&nbsp;вас сгорит дом&nbsp;&mdash; не&nbsp;переживайте, мы&nbsp;выдадим вам новый. Товар, не&nbsp;дом, конечно&nbsp;же.                            </p>
                         </div>
                         <div class="services-description credit">
                             <h3 class="tab-title">Кредит</h3>
@@ -311,20 +312,20 @@
                         <p class="e-mail-free">Это бесплатно</p>
                     </form>
                     <p class="e-mail-advantage">
-                        Еженедельный дайджест с обзорами новинок, длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.
+                        Еженедельный дайджест с&nbsp;обзорами новинок,&nbsp; длительными тест-драйвами, распаковками, а&nbsp;также акции, спецпредложения и&nbsp;вот это вот всё.
                     </p>
                 </div>
             </section>
         </main>
         <footer class="page-footer">
             <div class="convenience">
-                <a class="device-logo" href="index.html">
+                <a class="footer-device-logo" href="index.html">
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <section class="footer-contacts">
                     <h2 class="visually-hidden">Контакты</h2>
                     <address class="footer-contacts-address">
-                        <p class="contacts-address-text">
+                        <p class="footer-contacts-address-text">
                             Санкт-Петербург, набережная реки Карповки, 5, литера П.
                         </p>
                     </address>
