--- a/catalog.html
+++ b/catalog.html
@@ -15,7 +15,7 @@
                 <div class="navigation-header">
                     <form class="search-line" action="https://echo.htmlacademy.ru" method="get" name="search">
                         <input class="header-search" type="search" name="finder" placeholder="Поиск по сайту" required autocomplete="off" />
-                        <button class="button-search" type="submit">Найти</button>
+                        <button class="button-search" type="submit" >Найти</button>
                     </form>
                     <ul class="navigation-user">
                         <li class="navigation-item">
@@ -97,7 +97,7 @@
                         <a class="breadcrumbs-link" href="index.html">Главная</a>
                     </li>
                     <li class="breadcrumbs-item">
-                        <a class="breadcrumbs-link" href="#">Каталог</a>
+                        <a class="breadcrumbs-link" href="#">Каталог товаров</a>
                     </li>
                     <li class="breadcrumbs-item">
                         <a class="breadcrumbs-link">Моноподы для селфи</a>
@@ -107,6 +107,7 @@
             <section class="catalog-goods">
                 <div class="filter">
                     <h2 class="products-filter">Фильтр:</h2>
+                    <div class="filter-container">
                     <form class="catalog-filter" action="#" method="get" name="filter">
                         <fieldset class="catalog-filter-group">
                             <legend class="catalog-filter-title">Стоимость</legend>
@@ -180,29 +181,34 @@
                                 </li>
                             </ul>
                         </fieldset>
-                        <button class="button" type="submit">Показать</button>
+                        <button class="button-filter button" type="submit">Показать</button>
                     </form>
                 </div>
+            </div>
                 <div class="sorting-catalog-products">
+                    <div class="sorting-container">
                     <form class="sorting-type" action="#" method="get" name="sorting-product">
+                        <div class="select">
                         <label for="sorting-product">Сортировка:</label>
                         <select class="control" id="sorting-product" name="sorting-product">
                             <option value="popular">Сначала популярные</option>
                             <option value="cheap">Сначала дешевое</option>
                             <option value="expensive">Сначала дорогое</option>
                         </select>
-                        <button class="button-sorting" type="submit">
-                            <span class="visually-hidden">Отсортировать товары</span>
+                        </div>
+                        <button class="button-sorting visually-hidden" type="submit">
+                        Отсортировать товары
                         </button>
-                    <button class="button button-up" type="button">
-                        <svg class="up-icon" width="11" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 0 11 10H0" fill="#000" opacity=".2"/></svg>
+                    </form>
+                    <button class="button-up" type="button">
+                        <svg class="up-icon" width="11" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 0 11 10H0" /></svg>
                         <span class="visually-hidden">Сверху вниз</span>
                     </button>
-                    <button class="button button-down" type="button">
-                        <svg class="down-icon" width="11" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 10 0 0h11" fill="#000"/></svg>
+                    <button class="button-down" type="button">
+                        <svg class="down-icon" width="11" height="10" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M5.5 0 11 10H0"  /></svg>
                         <span class="visually-hidden">Снизу вверх</span>
                     </button>
-                </form>
+                    </div>
                     <ul class="product-list">
                         <li class="product-card">
                             <a class="product-card-link" href="#">
@@ -303,13 +309,13 @@
         </main>
         <footer class="page-footer">
             <div class="convenience">
-                <a class="device-logo" href="index.html">
+                <a class="footer-device-logo" href="index.html">
                     <img class="footer-contacts-logo" src="img/logo2.svg" width="145" height="36" alt="Логотип Магазин «Девайс»" />
                 </a>
                 <section class="footer-contacts">
                     <h2 class="visually-hidden">Контакты</h2>
                     <address class="footer-contacts-address">
-                        <p class="contacts-address-text">
+                        <p class="footer-contacts-address-text">
                             Санкт-Петербург, набережная реки Карповки, 5, литера П.
                         </p>
                     </address>
