--- a/catalog.html
+++ b/catalog.html
@@ -270,37 +270,37 @@
                     <ul class="pagination">
                         <li class="pagination-item">
                             <a class="pagination-prev" href="#">
-                                <span>Назад</span>
+                              Назад
                             </a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-link" href="#">
-                                <span>1</span>
+                                1
                             </a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-link" href="#">
-                                <span>2</span>
+                                2
                             </a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-link" href="#">
-                                <span>3</span>
+                                3
                             </a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-link" href="#">
-                                <span>...</span>
+                                ...
                             </a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-link" href="#">
-                                <span>15</span>
+                                15
                             </a>
                         </li>
                         <li class="pagination-item">
                             <a class="pagination-next" href="#">
-                                <span>Вперед</span>
+                                Вперед
                             </a>
                         </li>
                     </ul>
