--- a/index.html
+++ b/index.html
@@ -151,28 +151,34 @@
                     </div>
                 </div>
                 <div class="product-slider">
-                    <button class="slider-button slider-prev" type="button">
+                    <button class="slider-button-move slider-prev" type="button">
+                        <svg class="slider-icon" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" />
+                            </svg>
                         <span class="visually-hidden">Предыдущий слайд</span>
                     </button>
-                    <button class="slider-button slider-next" type="button">
+                    <button class="slider-button-move slider-next" type="button">
+                        <svg class="slider-icon" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
+                            <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" />
+                            </svg>
                         <span class="visually-hidden">Следующий слайд</span>
                     </button>
 
                     <ol class="slider-pagination">
                         <li class="slider-pagination-item">
-                            <button class="slider-pagination-button slider-pagination-button-current pagination-active" type="button">
+                            <button class="slider-pagination-button slider-pagination-button-current" type="button">
                                 <span class="visually-hidden">1 слайд</span>
                             </button>
                         </li>
 
                         <li class="slider-pagination-item">
-                            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                            <button class="slider-pagination-button " type="button">
                                 <span class="visually-hidden">2 слайд</span>
                             </button>
                         </li>
 
                         <li class="slider-pagination-item">
-                            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+                            <button class="slider-pagination-button " type="button">
                                 <span class="visually-hidden">3 слайд</span>
                             </button>
                         </li>
