--- a/catalog.html
+++ b/catalog.html
@@ -90,6 +90,7 @@
             </nav>
         </header>
         <main class="main-inner">
+            <div class="page-container">
             <section class="inner-header">
                 <h1 class="tab-title monopod">Моноподы для селфи</h1>
                 <ul class="breadcrumbs">
@@ -306,6 +307,7 @@
                     </ul>
                 </div>
             </section>
+        </div>
         </main>
         <footer class="page-footer">
             <div class="convenience">
