--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                     </div>
                 </div>
                 <div class="product-slider">
+                    <div class="button-container">
                     <button class="slider-button-move slider-prev" type="button">
                         <svg class="slider-icon" width="20" height="60" viewBox="0 0 20 60" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M20 60H16.5L0 30L16.5 0H20L3.8 30L20 60Z" />
@@ -163,7 +164,8 @@
                             </svg>
                         <span class="visually-hidden">Следующий слайд</span>
                     </button>
-
+                </div>
+                <div class="slider-pagination-container">
                     <ol class="slider-pagination">
                         <li class="slider-pagination-item">
                             <button class="slider-pagination-button slider-pagination-button-current" type="button">
@@ -184,6 +186,7 @@
                         </li>
                     </ol>
                     <button class="button slider-button" type="button">Подробнее</button>
+                </div>
                 </div>
             </section>
             <section class="catalog-products">
