--- a/index.html
+++ b/index.html
@@ -45,6 +45,38 @@
                                 </svg>
                                 Корзина
                             </a>
+                            <div class="popover popover-cart">
+                                <button class="popover-close-button ">
+                                    2
+                                    <span class="visually-hidden">Закрыть</span>
+                                  </button>
+                                <div class="popover-content">
+                                    <h2 class="visually-hidden popover-title">Корзина</h2>
+                                    <ul class="cart-items-list">
+                                        <li class="cart-item">
+                                            <img class="product-card-image" src="img/catalog/product-1.jpg" width="41" height="43" alt="Любительская селфи-палка" />
+                                          <p class="cart-item-title">Любительская селфи-палка</p>
+                                          <button type="button" class="cart-item-button">
+                                            <span class="visually-hidden">Удалить из корзины</span>
+                                        </button>
+                                          </li>
+                                          <li class="cart-item">
+                                            <img class="product-card-image" src="img/catalog/product-2.jpg" width="41" height="43" alt="Профессиональная селфи-палка" />
+                                          <p class="cart-item-title">Профессиональная селфи-палка</p>
+                                          <button type="button" class="cart-item-button ">
+                                            <span class="visually-hidden">Удалить из корзины</span>
+                                          </button>
+                                          </li>
+                                    </ul>
+                                    <div class="cart-price">
+                                    <p>Товаров:2</p>
+                                    <p>Сумма:2000р</p>
+                                    </div>
+                                  </div>
+                                  <button class="cart-open">
+                                      Открыть корзину
+                                  </button>
+                            </div>
                         </li>
                     </ul>
                 </div>
