Изменения от 16.11.21 ночь

--- a/index.html
+++ b/index.html
@@ -54,18 +54,23 @@
                                     <h2 class="visually-hidden popover-title">Корзина</h2>
                                     <ul class="cart-items-list">
                                         <li class="cart-item">
-                                            <img class="product-card-image" src="img/catalog/product-1.jpg" width="41" height="43" alt="Любительская селфи-палка" />
-                                          <p class="cart-item-title">Любительская селфи-палка</p>
+                                          <a class="cart-link-title" href="#">
+                                            <img class="product-cart-image" src="img/catalog/product-1.jpg" width="41" height="43" alt="Любительская селфи-палка" />
+                                            <p class="cart-item-title">Любительская селфи-палка</p>
+                                          </a>
                                           <button type="button" class="cart-item-button">
                                             <span class="visually-hidden">Удалить из корзины</span>
                                         </button>
                                           </li>
                                           <li class="cart-item">
-                                            <img class="product-card-image" src="img/catalog/product-2.jpg" width="41" height="43" alt="Профессиональная селфи-палка" />
-                                          <p class="cart-item-title">Профессиональная селфи-палка</p>
+                                            <a class="cart-link-title" href="#">
+                                            <img class="product-cart-image" src="img/catalog/product-2.jpg" width="41" height="43" alt="Профессиональная селфи-палка" />
+                                            <p class="cart-item-title">Профессиональная селфи-палка</p>
+                                          </a>
                                           <button type="button" class="cart-item-button ">
                                             <span class="visually-hidden">Удалить из корзины</span>
                                           </button>
+                                        </a>
                                           </li>
                                     </ul>
                                     <div class="cart-price">
